[gd_scene load_steps=6 format=3 uid="uid://bgem34307142l"]

[ext_resource type="Script" path="res://scripts/Enem2.gd" id="1_1cv51"]
[ext_resource type="Texture2D" uid="uid://eyncryuv70" path="res://img/Ent-base.svg" id="1_bvvdf"]
[ext_resource type="Texture2D" uid="uid://dgjfa2sxrrv3n" path="res://img/enem-face.svg" id="2_quoja"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jdnop"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_210gt"]

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_1cv51")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_jdnop")

[node name="char" type="Sprite2D" parent="."]
modulate = Color(0, 1, 0, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_bvvdf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_210gt")

[node name="face" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_quoja")

[node name="Enemigo2" type="Node2D" parent="."]

[node name="TiempoExp" type="Timer" parent="."]

[node name="timeBeforeShrink" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TiempoExp" to="." method="_on_tiempo_exp_timeout"]
[connection signal="timeout" from="timeBeforeShrink" to="." method="_enemyNeedsToShrink"]
